samples/_failures_safe/1761530375_14ab3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4276ebe2.c: In function ‘main’:
./samples/SAFE/__tmp_4276ebe2.c:141:5: error: expected expression at end of input
  141 |     while (get_next_token(input, &pos, len,
      |     ^~~~~
./samples/SAFE/__tmp_4276ebe2.c:141:12: error: too few arguments to function ‘get_next_token’
  141 |     while (get_next_token(input, &pos, len,
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4276ebe2.c:85:5: note: declared here
   85 | int get_next_token(const char *input, int *pos, int len, struct Token *token, int *line, int *column) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4276ebe2.c:141:5: error: expected declaration or statement at end of input
  141 |     while (get_next_token(input, &pos, len,
      |     ^~~~~
